fix dark mode theme

--- a/public/ThemeStyle/BluePremium/assets/css/style.css
+++ b/public/ThemeStyle/BluePremium/assets/css/style.css
@@ -209,6 +209,15 @@ body {
   font-size: 1.5rem;
   font-family: "Work Sans", sans-serif;
   min-height: 4000px;
+  background-color: #fff; 
+  color: #000; 
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #333; /* Set the dark mode background color */
+    color: #fff; /* Set the dark mode text color */
+  }
 }
 
 p {
